--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,23 @@
     <artifactId>cucumber-java</artifactId>
     <version>6.10.4</version>
 </dependency>
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-core</artifactId>
+    <version>6.10.4</version>
+</dependency>
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-junit</artifactId>
+    <version>6.10.4</version>
+
+</dependency>
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-testng</artifactId>
+    <version>6.10.4</version>
+</dependency>
+
     <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
@@ -47,6 +64,17 @@
     <artifactId>selenium-remote-driver</artifactId>
     <version>4.0.0-alpha-7</version>
 </dependency>
+<dependency>
+    <groupId>com.vimalselvam</groupId>
+    <artifactId>cucumber-extentsreport</artifactId>
+    <version>3.1.1</version>
+</dependency>
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.0.8</version>
+</dependency>
+
     
   </dependencies>
 </project>
